@@ -1,3 +1,7 @@
+2023-11-26  Markus Gans  <guru.mail@muenster.de>
+	* Fix incorrectly calculated coordinates in FScrollView 
+	  on position changes
+
 2023-11-11  Markus Gans  <guru.mail@muenster.de>
 	* Optimized mouse string parser
 
